# WaifuTechBot

./: .gitignore  __main__.py  pyproject.toml
cogs/: cunny.py  funny.py  memes.py
core/: __init__.py  copypastas.py  log.py  megu.py
core/ext/: __init__.py  embedbuilder.py  paginators.py
